test/tests/VoidExpression.panda
class VoidExpression {
    method foo() {
    }

    method test() {
        def value := foo()
    }
}